--- a/css/global.css
+++ b/css/global.css
@@ -1,11 +1,11 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
+  padding-bottom: 600px;
 }
 
 img {
   max-width: 100%;
-  height: auto;
   display: block;
 }
 
