--- a/css/header.css
+++ b/css/header.css
@@ -9,7 +9,9 @@
 }
 
 .header img {
-  padding: 36px;
+  padding-left: 20px;
+  padding-bottom: 36px;
+  padding-top: 36px;
 }
 
 .header-menu {
@@ -19,7 +21,7 @@
 }
 
 .header-menu:last-child {
-  padding-right: 36px;
+  padding-right: 20px;
 }
 
 .header-menu a {
