--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,7 +1,7 @@
 .introducao-bg {
-  background: #000;
-  color: #fff;
-  box-shadow: inset 0 -120px #fff;
+  background: var(--cor-12);
+  color: var(--cor-0);
+  box-shadow: inset 0 -80px var(--cor-0);
 }
 
 .introducao {
@@ -17,7 +17,7 @@
 
 .introducao-conteudo {
   align-self: end;
-  padding-bottom: 200px;
+  padding-bottom: 160px;
 }
 
 .introducao-img img {
@@ -27,48 +27,33 @@
 }
 
 .introducao-conteudo h1 {
-  font-size: 64px;
-  line-height: 1.12;
   margin-bottom: 32px;
 }
 
 .introducao-conteudo p {
-  font-size: 24px;
-  line-height: 1.5;
-  color: #b2b2b2;
   margin-bottom: 20px;
 }
 
-.introducao-conteudo span {
-  color: #ffbb00;
-}
-
 @media (max-width: 1200px) {
+  .introducao-bg {
+    padding-top: 36px;
+  }
   .introducao {
     gap: 40px;
   }
 
   .introducao-conteudo {
-    padding-bottom: 160px;
-  }
-
-  .introducao-conteudo h1 {
-    font-size: 48px;
-  }
-
-  .introducao-conteudo p {
-    font-size: 20px;
+    padding-bottom: 140px;
   }
 
   .introducao-bg {
-    box-shadow: inset 0 -80px #fff;
+    box-shadow: inset 0 -80px var(--cor-0);
   }
 }
 
 @media (max-width: 800px) {
   .introducao-bg {
-    background: #111;
-    padding-top: 36px;
+    background: var(--cor-10);
     box-shadow: inset 0 -60px #fff;
   }
 
@@ -79,11 +64,7 @@
     padding-bottom: 0px;
   }
   .introducao-conteudo h1 {
-    font-size: 32px;
     margin-bottom: 16px;
-  }
-  .introducao-conteudo p {
-    font-size: 16px;
   }
   .introducao-img img {
     height: 300px;
@@ -92,6 +73,12 @@
 }
 
 @media (max-width: 600px) {
+  .introducao-bg {
+    padding-top: 20px;
+  }
+  .introducao-bg {
+    box-shadow: inset 0 -30px #fff;
+  }
   .introducao-conteudo h1 {
     font-size: 32px;
   }
