--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
-/* Global */
 @import "./global/global.css";
+@import "./utilidades/cores.css";
 @import "./global/header.css";
 
 /* Utilidades */
 @import "./utilidades/componentes.css";
+@import "./utilidades/tipografia.css";
 
 /* Home */
 @import "./home/introducao.css";
