--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,19 +1,18 @@
 .botao {
   display: inline-block;
-  font-size: 18px;
-  line-height: 1.3;
   padding: 16px 32px;
-  text-transform: uppercase;
-  font-weight: bold;
-  color: #332200;
+  color: var(--cor-p5);
   background: linear-gradient(#ffbf00, #f2a50c);
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
+  font: 500 1.125rem/1.35 "Roboto", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 0.015em;
 }
 
 @media (max-width: 600px) {
   .botao {
     padding: 12px 16px;
-    font-size: 16px;
+    font-size: 1rem;
   }
 }
