--- a/css/home/tecnologia.css
+++ b/css/home/tecnologia.css
@@ -63,3 +63,50 @@
   grid-template-columns: 1fr;
   gap: 8px;
 }
+
+@media (max-width: 1200px) {
+  .tecnologia {
+    gap: 36px;
+  }
+
+  .tecnologia-conteudo {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+  .tecnologia-bg {
+    box-shadow: inset 0 -60px var(--cor-0), inset 0 60px var(--cor-0);
+  }
+}
+
+@media (max-width: 800px) {
+  .tecnologia {
+    grid-template-columns: 1fr;
+  }
+
+  .tecnologia-bg {
+    box-shadow: initial;
+  }
+
+  .tecnologia-img {
+    display: none;
+  }
+  .tecnologia-conteudo {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .tecnologia-introducao h2 {
+    margin-bottom: 20px;
+  }
+  .tecnologia-introducao {
+    margin-bottom: 44px;
+  }
+}
+
+@media (max-width: 600px) {
+  .tecnologia-vantagens {
+    flex-direction: column;
+  }
+  .tecnologia-vantagens img {
+    width: 24px;
+  }
+}
