--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,4 @@
 @import "./home/introducao.css";
 @import "./home/bicicletas-lista.css";
 @import "./home/tecnologia.css";
+@import "./home/parceiros.css";
