--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,4 @@
 @import "./home/bicicletas-lista.css";
 @import "./home/tecnologia.css";
 @import "./home/parceiros.css";
+@import "./home/depoimento.css";
