--- a/css/home/parceiros.css
+++ b/css/home/parceiros.css
@@ -4,7 +4,7 @@
 }
 
 .parceiros h2 {
-  padding-bottom: 60px;
+  margin-bottom: 60px;
 }
 
 .parceiros ul {
@@ -40,13 +40,13 @@
     padding-bottom: 40px;
   }
   .parceiros h2 {
-    padding-bottom: 32px;
+    margin-bottom: 32px;
   }
 }
 
 @media (max-width: 800px) {
   .parceiros h2 {
-    padding-bottom: 20px;
+    margin-bottom: 20px;
   }
 }
 
