--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,4 @@
 @import "./home/tecnologia.css";
 @import "./home/parceiros.css";
 @import "./home/depoimento.css";
+@import "./home/seguros.css";
