--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -10,12 +10,26 @@
   display: inline-block;
   padding: 16px 32px;
   color: var(--cor-p5);
-  background: linear-gradient(#ffbf00, #f2a50c);
+  background: var(--cor-p1);
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   font: 500 1.125rem/1.35 "Roboto", sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.015em;
+  width: fit-content;
+}
+
+.botao:hover {
+  background: var(--cor-p3);
+}
+
+.botao.secundario {
+  background: var(--cor-8);
+  color: var(--cor-0);
+}
+
+.botao.secundario:hover {
+  background: var(--cor-9);
 }
 
 @media (max-width: 600px) {
