--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import "./global/global.css";
 @import "./utilidades/cores.css";
 @import "./global/header.css";
+@import "./global/footer.css";
 
 /* Utilidades */
 @import "./utilidades/componentes.css";
