--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,15 @@
 
 /* Home */
 @import "./home/introducao.css";
-@import "./home/bicicletas-lista.css";
 @import "./home/tecnologia.css";
 @import "./home/parceiros.css";
 @import "./home/depoimento.css";
-@import "./home/seguros.css";
+
+/* Bicicletas */
+@import "./bicicletas/bicicletas-lista.css";
+
+/*Seguros*/
+@import "./seguros/seguros.css";
+
+/*Termos*/
+@import "./termos/termos.css";
