--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -6,6 +6,19 @@
   padding-right: 20px;
 }
 
+.titulo-bg {
+  background-color: var(--cor-11);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media (max-width: 1200px) {
+  .titulo-bg {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+}
+
 .botao {
   display: inline-block;
   padding: 16px 32px;
