--- a/css/termos/termos.css
+++ b/css/termos/termos.css
@@ -1,6 +1,6 @@
 .termos {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .termos ul {
@@ -20,6 +20,13 @@
 }
 
 @media (max-width: 1200px) {
+  .termos {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media (max-width: 800px) {
   .termos {
     padding-top: 40px;
     padding-bottom: 40px;
