--- a/css/bicicletas/bicicletas.css
+++ b/css/bicicletas/bicicletas.css
@@ -44,7 +44,10 @@
   grid-column: 2;
   align-self: end;
 }
-
+.bicicletas-conteudo-itens ul {
+  display: grid;
+  gap: 10px;
+}
 .bicicletas-conteudo-itens li {
   display: flex;
   gap: 16px;
@@ -60,7 +63,6 @@
   min-height: 350px;
   height: 100%;
   border-radius: 5px;
-  align-items: initial;
 }
 
 .bicicletas-conteudo-img span {
@@ -70,4 +72,56 @@
   border-radius: 4px 0 0 4px;
   top: 40px;
   right: 0;
+}
+
+@media (max-width: 1200px) {
+  .bicicletas {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  .bicicletas-conteudo {
+    gap: 20px;
+  }
+}
+
+@media (max-width: 800px) {
+  .bicicletas {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    gap: 40px;
+  }
+
+  .bicicletas-conteudo {
+    grid-template-columns: 1fr;
+  }
+
+  .bicicletas-conteudo-img img {
+    max-width: 100%;
+    min-height: 200px;
+    border-radius: 5px;
+  }
+
+  .bicicletas-bg {
+    background: var(--cor-11);
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  .bicicletas-conteudo-itens a {
+    grid-column: 1;
+    align-self: start;
+  }
+
+  .bicicletas-conteudo-itens ul {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .bicicletas-conteudo-itens h2 {
+    padding-top: 20px;
+  }
+
+  .bicicletas-conteudo-itens h2::before {
+    top: 0px;
+  }
 }
