--- a/css/utilidades/tipografia.css
+++ b/css/utilidades/tipografia.css
@@ -50,13 +50,21 @@
   .font-1-xxl {
     font-size: 2.5rem;
   }
+
   .font-2-l,
   .font-2-l-b {
     font-size: 1.125rem;
   }
+
+  .font-2-m,
+  .font-2-m-b {
+    font-size: 1rem;
+  }
+
   .font-1-xl {
     font-size: 1.5rem;
   }
+
   .font-2-s {
     font-size: 0.875rem;
   }
@@ -70,7 +78,8 @@
     font-size: 1.125rem;
   }
   .font-1-l,
-  .font-1-l-b {
+  .font-1-l-b,
+  .font-1-m {
     font-size: 1rem;
   }
   .font-2-l,
