--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,8 @@
 
 /*Seguros*/
 @import "./seguros/seguros.css";
+@import "./seguros/seguros-vantagens.css";
+@import "./seguros/seguros-perguntas.css";
 
 /*Termos*/
 @import "./termos/termos.css";
