--- a/css/bicicletas/bicicletas-lista.css
+++ b/css/bicicletas/bicicletas-lista.css
@@ -1,6 +1,6 @@
 .bicicletas-lista {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
 
 .bicicletas-lista h2 {
@@ -52,7 +52,8 @@
 
 @media (max-width: 1200px) {
   .bicicletas-lista {
-    padding-top: 40px;
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
 }
 
@@ -60,11 +61,15 @@
   .bicicletas-lista h2 {
     margin-bottom: 20px;
   }
+
+  .bicicletas-lista-itens {
+    gap: 20px;
+  }
+}
+
+@media (max-width: 600px) {
   .bicicletas-lista {
     padding-top: 40px;
     padding-bottom: 40px;
-  }
-  .bicicletas-lista-itens {
-    gap: 20px;
   }
 }
