--- a/css/home/tecnologia.css
+++ b/css/home/tecnologia.css
@@ -10,8 +10,8 @@
 }
 
 .tecnologia-conteudo {
-  padding-top: 140px;
-  padding-bottom: 140px;
+  padding-top: 160px;
+  padding-bottom: 160px;
 }
 
 .tecnologia-img img {
@@ -81,6 +81,7 @@
     padding-top: 120px;
     padding-bottom: 120px;
   }
+
   .tecnologia-bg {
     box-shadow: inset 0 -60px var(--cor-0), inset 0 60px var(--cor-0);
   }
@@ -98,10 +99,12 @@
   .tecnologia-img {
     display: none;
   }
+
   .tecnologia-conteudo {
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
+
   .tecnologia-introducao h2 {
     margin-bottom: 20px;
   }
@@ -111,10 +114,16 @@
 }
 
 @media (max-width: 600px) {
+  .tecnologia-conteudo {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
   .tecnologia-vantagens {
     flex-direction: column;
     gap: 20px;
   }
+
   .tecnologia-vantagens img {
     width: 24px;
   }
