--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -29,7 +29,7 @@
   font: 500 1.125rem/1.35 "Roboto", sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.015em;
-  width: fit-content;
+  max-width: fit-content;
 }
 
 .botao:hover {
@@ -59,7 +59,7 @@
   margin-left: 16px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .botao {
     padding: 12px 16px;
     font-size: 1rem;
