--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -52,6 +52,7 @@
   .introducao-bg {
     padding-top: 40px;
     background: var(--cor-11);
+    box-shadow: inset 0 -40px var(--cor-0);
   }
 
   .introducao {
