--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,7 @@
 
 /*Termos*/
 @import "./termos/termos.css";
+
+/*Contato*/
+@import "./contato/contato.css";
+@import "./contato/formulario.css";
