--- a/css/contato/contato.css
+++ b/css/contato/contato.css
@@ -10,7 +10,7 @@
 .contato-informacoes,
 .contato-formulario {
   padding: 60px;
-  box-sizing: 0 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 1px 2px 0px #0000001a;
 }
 
 .contato-informacoes {
