--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,12 @@
 /*Termos*/
 @import "./termos/termos.css";
 
+/*Formulario*/
+@import "./formulario/formulario.css";
+
+/*Orçamento*/
+@import "./orcamento/orcamento.css";
+
 /*Contato*/
 @import "./contato/contato.css";
 @import "./contato/formulario.css";
